# SDotPaint

./: .clang-tidy  .gitignore  CMakeLists.txt  DrawMode.h  GeminiService-winhttp.cpp  GeminiService.cpp  GeminiService.h  ILayer.h  LayerManager.cpp  LayerManager.h  PaintModel.cpp  PaintModel.h  README.md  RasterLayer.cpp  RasterLayer.h  VectorLayer.cpp  VectorLayer.h  main.cpp
.github/workflows/: ci-alternative.yml  ci.yml
src/app/: MessageHandler.cpp  MessageHandler.h  globals.h  main.cpp
src/core/: LayerManager.cpp  LayerManager.h  PenData.h
src/layers/: ILayer.h  RasterLayer.cpp  RasterLayer.h
src/test/: RasterLayerTest.cpp
src/tools/: EraserTool.cpp  EraserTool.h  Itool.h  PanTool.cpp  PanTool.h  PenTool.cpp  PenTool.h  RotateTool.cpp  RotateTool.h  ToolController.cpp  ToolController.h  ZoomTool.cpp  ZoomTool.h
src/ui/: UIHandlers.cpp  UIHandlers.h  UIManager.cpp  UIManager.h
src/view/: ViewManager.cpp  ViewManager.h
tests/: LayerManager.test.cpp  MockLayer.h  PaintModel.test.cpp  VectorLayer.test.cpp
